--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "homepage": "https://gurukudte.github.io/React-app",
+  "homepage": "https://gurukudte.github.io/geekyzindagi/",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@supabase/supabase-js": "^2.2.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -25,7 +26,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
   },
   "eslintConfig": {
     "extends": [
