--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://gurukudte.github.io/geekyzindagi/",
-  "name": "my-app",
+  "name": "geekyzindagi",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,18 +7,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.10",
+    "@types/node": "^16.18.11",
+    "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,10 +39,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/styled-components": "^5.1.26",
-    "gh-pages": "^4.0.0"
   }
 }
