--- a/server/package.json
+++ b/server/package.json
@@ -24,9 +24,10 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.7",
     "express": "^4.18.2",
+    "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
-    "mongo": "^0.1.0",
+    "mongodb": "^4.13.0",
     "mongoose": "^6.8.4",
     "nanoid": "^4.0.0",
     "pino": "^8.8.0",
