--- a/server/.gitignore
+++ b/server/.gitignore
@@ -2,8 +2,23 @@
 
 # dependencies
 /node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
 
 # misc
-/config
-/models
-/utils
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+modal.tsx
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
